[gd_scene load_steps=10 format=3 uid="uid://25yh7iirnmwx"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_pbupb"]
[ext_resource type="Texture2D" uid="uid://bma86gn45xto3" path="res://maxpixel/final.png" id="2_1v3c4"]
[ext_resource type="Texture2D" uid="uid://bpvirmhbd68af" path="res://maxpixel/tileset.png" id="2_eusxq"]
[ext_resource type="PackedScene" uid="uid://cjexaomv1h7wd" path="res://Scenes/Player.tscn" id="3_tc5nh"]
[ext_resource type="PackedScene" uid="uid://cc07acmftajbs" path="res://Scenes/Finish.tscn" id="4_3ki0a"]
[ext_resource type="PackedScene" uid="uid://cbugtq8c1sj6a" path="res://Scenes/Timer.tscn" id="6_wb6ov"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1i75g"]
texture = ExtResource("2_1v3c4")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wu66r"]
texture = ExtResource("2_eusxq")
texture_region_size = Vector2i(8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:0/animation_columns = 2
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:0/animation_frame_0/duration = 1.0
2:0/animation_frame_1/duration = 1.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:2/animation_columns = 7
0:2/animation_frame_0/duration = 1.0
0:2/animation_frame_1/duration = 1.0
0:2/animation_frame_2/duration = 1.0
0:2/animation_frame_3/duration = 1.0
0:2/animation_frame_4/duration = 1.0
0:2/animation_frame_5/duration = 1.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_s38gj"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_wu66r")
sources/0 = SubResource("TileSetAtlasSource_1i75g")

[node name="Main" type="Node2D"]
script = ExtResource("1_pbupb")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-64, -32)
tile_set = SubResource("TileSet_s38gj")
format = 2
layer_0/name = "1"
layer_0/tile_data = PackedInt32Array(-1, 1, 3, 65535, 1, 3, 131071, 1, 3, 196607, 1, 3, 262143, 1, 3, 327679, 1, 3, 393215, 1, 3, 458751, 1, 3, 524287, 1, 3, 589823, 1, 3, -65536, 1, 3, 0, 1, 3, 65536, 1, 3, 131072, 1, 3, 196608, 1, 3, 262144, 1, 3, 327680, 1, 3, 393216, 1, 3, 458752, 0, 0, 524288, 1, 3, -65535, 1, 3, 1, 1, 3, 65537, 1, 3, 131073, 1, 3, 196609, 1, 3, 262145, 1, 3, 327681, 1, 3, 393217, 1, 3, 458753, 1, 3, 524289, 1, 3, -65534, 1, 3, 2, 1, 3, 65538, 1, 3, 131074, 1, 2, 196610, 1, 2, 262146, 1, 2, 327682, 1, 3, 393218, 1, 3, 458754, 1, 3, -65533, 1, 3, 3, 1, 3, 65539, 1, 3, 131075, 1, 3, 196611, 1, 3, 262147, 1, 3, 327683, 1, 3, 393219, 1, 3, 458755, 1, 3, 524291, 1, 2, -65532, 1, 3, 4, 1, 3, 65540, 1, 3, 131076, 1, 3, 196612, 1, 3, 262148, 1, 3, 327684, 1, 3, 393220, 1, 3, 458756, 1, 3, 524292, 1, 2, -65531, 1, 3, 5, 1, 3, 65541, 1, 3, 131077, 1, 3, 196613, 1, 3, 262149, 1, 3, 327685, 1, 3, 393221, 1, 3, 458757, 1, 2, 524293, 1, 2, -65530, 1, 3, 6, 1, 3, 65542, 1, 3, 131078, 1, 3, 196614, 1, 3, 262150, 1, 3, 327686, 1, 3, 393222, 1, 3, 458758, 1, 3, 524294, 1, 3, -65529, 1, 3, 7, 1, 3, 65543, 1, 3, 131079, 1, 3, 196615, 1, 3, 262151, 1, 3, 327687, 1, 3, 393223, 1, 3, 458759, 1, 3, 524295, 1, 3, -65528, 1, 3, 8, 1, 3, 65544, 1, 3, 131080, 1, 3, 196616, 1, 3, 262152, 1, 3, 327688, 1, 3, 393224, 1, 3, 458760, 1, 2, 524296, 1, 3, -65527, 1, 3, 9, 1, 2, 65545, 1, 3, 131081, 1, 3, 196617, 1, 3, 262153, 1, 3, 327689, 1, 3, 393225, 1, 3, 458761, 1, 2, 524297, 1, 3, -65526, 1, 3, 10, 1, 2, 65546, 1, 3, 131082, 1, 3, 196618, 1, 3, 262154, 1, 3, 327690, 1, 3, 393226, 1, 3, 458762, 1, 2, 524298, 1, 3, -65525, 1, 3, 11, 1, 2, 65547, 1, 3, 131083, 1, 2, 196619, 1, 2, 262155, 1, 2, 327691, 1, 2, 393227, 1, 3, 458763, 1, 2, 524299, 1, 3, -65524, 1, 3, 12, 1, 2, 65548, 1, 3, 131084, 1, 3, 196620, 1, 3, 262156, 1, 3, 327692, 1, 3, 393228, 1, 3, 458764, 1, 3, 524300, 1, 3, -65523, 1, 3, 13, 1, 3, 65549, 1, 3, 131085, 1, 3, 196621, 1, 3, 262157, 1, 3, 327693, 1, 3, 393229, 1, 3, 458765, 1, 3, 524301, 1, 3, -65522, 1, 2, 14, 1, 2, 65550, 1, 2, 131086, 1, 2, 196622, 1, 2, 262158, 1, 2, 327694, 1, 2, 393230, 1, 3, 458766, 1, 3, 524302, 1, 3, 655359, 65537, 1, 589824, 65537, 1, 589825, 65537, 1, 589827, 65537, 1, 589828, 65537, 1, 589829, 65537, 1, 589830, 65537, 1, 589831, 65537, 1, 589832, 65537, 1, 589833, 65537, 1, 589834, 65537, 1, 589835, 65537, 1, 589836, 65537, 1, 589837, 65537, 1, 589838, 65537, 1, 589839, 65537, 1, 589840, 65537, 1, 589841, 65537, 1, -65521, 1, 3, 15, 1, 3, 65551, 1, 3, 131087, 1, 3, 196623, 1, 3, 262159, 1, 3, 327695, 1, 3, 393231, 1, 3, 458767, 1, 3, 524303, 1, 3, -65520, 1, 3, 16, 1, 3, 65552, 1, 3, 131088, 1, 3, 196624, 1, 3, 262160, 1, 3, 327696, 1, 3, 393232, 1, 3, 458768, 1, 3, 524304, 1, 3, -65519, 65537, 1, 17, 65537, 1, 65553, 65537, 1, 131089, 65537, 1, 196625, 65537, 1, 262161, 65537, 1, 327697, 65537, 1, 393233, 65537, 1, 458769, 65537, 1, 524305, 65537, 1, 524290, 1, 2, 589826, 65537, 1, -65538, 65537, 1, -2, 65537, 1, 65534, 65537, 1, 131070, 65537, 1, 196606, 65537, 1, 262142, 65537, 1, 327678, 65537, 1, 393214, 65537, 1, 458750, 65537, 1, 524286, 65537, 1, 589822, 65537, 1, 655358, 65537, 1, -65537, 65537, 1, -131072, 65537, 1, -131071, 65537, 1, -131070, 65537, 1, -131069, 65537, 1, -131068, 65537, 1, -131067, 65537, 1, -131066, 65537, 1, -131065, 65537, 1, -131064, 65537, 1, -131063, 65537, 1, -131062, 65537, 1, -131061, 65537, 1, -131060, 65537, 1, -131059, 65537, 1, -131058, 65537, 1, -131057, 65537, 1, -131056, 65537, 1, -131055, 65537, 1)
layer_1/name = "2"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 5
layer_1/tile_data = PackedInt32Array(262145, 1, 0, 196609, 1, 0, 131073, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, 13, 1, 0, 65549, 1, 0, 131085, 1, 0, 196621, 1, 0, 262157, 1, 0, 327693, 1, 0, 458754, 131073, 0, 458755, 131073, 0, 458756, 131073, 0, 524296, 131073, 0, 524297, 131073, 0, 524298, 131073, 0, 524299, 131073, 0, 131081, 131073, 0, 196617, 131073, 0, 262153, 131073, 0, 327689, 131073, 0, 131082, 131073, 0, 196618, 131073, 0, 262154, 131073, 0, 327690, 131073, 0, -65538, 65537, 1, -65537, 65537, 1, -131072, 65537, 1, -131071, 65537, 1, -131070, 65537, 1, -131069, 65537, 1, -131068, 65537, 1, -131067, 65537, 1, -131066, 65537, 1, -131065, 65537, 1, -131064, 65537, 1, -131063, 65537, 1, -131062, 65537, 1, -131061, 65537, 1, -131060, 65537, 1, -131059, 65537, 1, -131058, 65537, 1, -131057, 65537, 1, -131056, 65537, 1, -131055, 65537, 1, -65519, 65537, 1, 17, 65537, 1, 65553, 65537, 1, 131089, 65537, 1, 196625, 65537, 1, 262161, 65537, 1, 327697, 65537, 1, 393233, 65537, 1, 458769, 65537, 1, 524305, 65537, 1, 589841, 65537, 1, 655358, 65537, 1, 655359, 65537, 1, 589824, 65537, 1, 589825, 65537, 1, 589826, 65537, 1, 589827, 65537, 1, 589828, 65537, 1, 589829, 65537, 1, 589830, 65537, 1, 589831, 65537, 1, 589832, 65537, 1, 589833, 65537, 1, 589834, 65537, 1, 589835, 65537, 1, 589836, 65537, 1, 589837, 65537, 1, 589838, 65537, 1, 589839, 65537, 1, 589840, 65537, 1, -2, 65537, 1, 65534, 65537, 1, 131070, 65537, 1, 196606, 65537, 1, 262142, 65537, 1, 327678, 65537, 1, 393214, 65537, 1, 458750, 65537, 1, 524286, 65537, 1, 589822, 65537, 1)

[node name="Player" parent="." instance=ExtResource("3_tc5nh")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(8, 8)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer2" type="Timer" parent="."]

[node name="Finish" parent="." instance=ExtResource("4_3ki0a")]
position = Vector2(-60, 28)

[node name="Timer3" parent="." instance=ExtResource("6_wb6ov")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
